# sophon

./: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: architecture.md
docs/api/: interp-api-v1.md  prompt-run.schema.json
docs/architecture/: 0001-backend-repository-split.md
models/: model-artifacts.seed.json
scripts/: benchmark_model_download.mjs  benchmark_runtime.mjs  check_bundle_budget.mjs  export_trace_onnx.py  generate_model_segment_digests.mjs  model-build-requirements.txt  reshard_onnx.py  smoke_prompt.mjs  smoke_ui.mjs  verify_model_artifacts.py
services/interp-api/: .dockerignore  Dockerfile  README.md  modal_app.py  pyproject.toml
services/interp-api/sophon_interp/: __init__.py  api.py  runtime.py  schemas.py
services/interp-api/tests/: test_schemas.py
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  workbench-client.tsx
src/components/: help-icon.tsx  markdown-content.tsx  prompt-dock.tsx  token-lens.tsx  (+9 more)
tests/: adaptive-range-queue.test.mjs  alias-loader.mjs  architecture-budget.test.mjs  auxiliary-cache.test.mjs  fake-model-delivery.mjs  fake-transformers.mjs  generation-metrics.test.mjs  info-hints.test.mjs  interp-client.test.mjs  model-artifacts.test.mjs  model-delivery.test.mjs  model-registry.test.mjs  onnx-runner.test.mjs  onnx-worker-protocol.test.mjs  range-downloader.test.mjs  token-display.test.mjs
(+49 files in other folders)
