[project]
name = "sophon-interp-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "modal>=1.0.0,<2",
  "pydantic>=2.8.0,<3",
  "torch>=2.4.0,<3",
  "transformer-lens>=2.16.0,<3",
  "uvicorn[standard]>=0.30.0,<1"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
